<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/background" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fotoku"
                tools:ignore="MissingClass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/user"
                android:textSize="15dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="#ECECEC">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:text="Nama :"
                        android:textSize="@dimen/activity_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/activity_size" />
                </TableRow>

                <TableRow

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_size"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:text="Kelas :"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_size"
                        android:layout_weight="1"
                        android:text="@string/clas"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_size"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:text="Tempat Tanggal Lahir :"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_size"
                        android:layout_weight="1"
                        android:text="@string/ttg"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_size"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:text="Jenis Kelamin :"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_size"
                        android:layout_weight="1"
                        android:text="@string/jk"
                        android:textColor="@android:color/black"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="#ECECEC">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="15dp"
                android:text="@string/text"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suka"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>

</ScrollView>